# SaotriBench

./: .gitignore  LICENSE  README.md  dashboard.css  dashboard.html  model.html  pyproject.toml  serve_dashboard.py
.claude/: settings.local.json
agents/: README.md  agent.py  bench_runner.py  config.py  llm_client.py  reports.py  run_benchmark.py
benchmark_audit/: 2026-02-21_2_audit.md  2026-02-21_audit.md
cursor-specs/: dcp-bench-specification.md  example-task-filter-numbers.md  saotri-bench-specification.md  saotri-bench-v2-context-mechanisms.md  saotri-bench-v3-extensions.md
development_tasks/: audit_2_technical_issues.md  internal_model_quality_signals.md  task_dashboard_score_bug.md  task_solvability_validation_framework.md
reports_archive/15_02_2026/: benchmark_report.json
results_analysis/16_feb_2026/: BENCHMARK_ANALYSIS.md  TECHNICAL_ERRORS.md
saotri_bench/: __init__.py  cli.py  evaluator.py  loader.py  metrics.py  models.py  runner.py  sandbox.py
tasks/task_00_filter_numbers/: evaluator.py  tests.py
tasks/task_00_fizzbuzz/: evaluator.py  problem.md  task.yaml  tests.py
tasks/task_01_normalize_dict/: evaluator.py  tests.py
tasks/task_01_transform_list/: evaluator.py  problem.md  task.yaml  tests.py
tasks/task_02_merge_dicts/: evaluator.py  problem.md  task.yaml  tests.py
tasks/task_03_validate_brackets/: task.yaml  tests.py
tasks/task_03_validate_brackets_perf/: evaluator.py  problem.md  task.yaml  tests.py
tasks/task_04_sort_objects/: evaluator.py  problem.md  task.yaml  tests.py
tasks/task_05_text_processor/: evaluator.py  tests.py  (+2 more)
(+139 files in other folders)
